--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "bower": "^1.8.0",
+    "crypto": "^1.0.1",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
     "mongoose": "^4.10.4",
