--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.15.2",
     "fs": "0.0.1-security",
     "mongoose": "^4.10.4",
+    "opn": "^5.1.0",
     "passport": "^0.3.2"
   }
 }
